--- a/src/index.html
+++ b/src/index.html
@@ -369,6 +369,10 @@
                 <h2 class="section-title">Recent Projects</h2>
                 <div class="grid">
                     <div class="card">
+                        <h3><a href="https://github.com/microsoft/playwright" target="_blank" rel="noopener noreferrer">Playwright</a></h3>
+                        <p>75k stars on GitHub: The leading end-to-end testing framework nowadays. I contributed extensively to core feature development, bug fixes, and the DevOps infrastructure (compiling browsers / automation).</p>
+                    </div>
+                    <div class="card">
                         <h3><a href="https://github.com/mxschmitt/action-tmate" target="_blank" rel="noopener noreferrer">action-tmate</a></h3>
                         <p>3k stars on GitHub: Debug your GitHub Actions via SSH by using tmate to get access to the runner system itself.</p>
                     </div>
@@ -383,6 +387,10 @@
                     <div class="card">
                         <h3><a href="https://try.playwright.tech" target="_blank" rel="noopener noreferrer">Try Playwright</a></h3>
                         <p>Try Playwright lets you execute and share Playwright scripts in your browser to get started with Playwright.</p>
+                    </div>
+                    <div class="card">
+                        <h3><a href="https://github.com/microsoft/playwright-dotnet" target="_blank" rel="noopener noreferrer">playwright-dotnet</a></h3>
+                        <p>2.7k stars on GitHub: .NET version of the Playwright testing and automation library for C# and other .NET languages.</p>
                     </div>
                 </div>
             </div>
@@ -409,6 +417,16 @@
                     <div class="card">
                         <h3><a href="https://www.youtube.com/watch?v=VavFU2vLnT0" target="_blank" rel="noopener noreferrer">Testing Blazor Applications with Playwright</a></h3>
                         <p>Microsoft | .NET Conf 2022</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="section">
+                <h2 class="section-title">Blog Posts</h2>
+                <div class="grid">
+                    <div class="card">
+                        <h3><a href="https://dev.to/playwright/implementing-microsoft-entra-certificate-based-authentication-with-playwright-4lbc" target="_blank" rel="noopener noreferrer">Implementing Microsoft Entra Certificate-Based Authentication with Playwright</a></h3>
+                        <p>A comprehensive guide on implementing certificate-based authentication with Playwright for Microsoft Entra, covering phishing-resistant and passwordless authentication methods.</p>
                     </div>
                 </div>
             </div>
